--- a/main/main.css
+++ b/main/main.css
@@ -1,4 +1,4 @@
-.drop-zone {
+#drop-zone {
     width: 100%;
     height: 100%;
     padding: 25px;
@@ -13,34 +13,8 @@
     color: #cccccc;
 }
 
-.drop-zone--over {
-    border-style: solid;
-}
-
-.drop-zone__input {
-    display: none;
-}
-
-.drop-zone__thumb {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: #cccccc;
-    background-size: cover;
-    position: relative;
-}
-
-.drop-zone__thumb::after {
-    content: attr(data-label);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 0;
-    color: #ffffffff;
-    background: rgba(0, 0, 0, 0.75);
-    font-size: 14px;
-    text-align: center;
+#drop-zone.dragover {
+    border-color: #000;
 }
 
 
